<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/action_about"/>
    
     <item
        android:id="@+id/action_suggest"
        android:orderInCategory="500"
        android:showAsAction="never"
        android:icon="@android:drawable/ic_menu_edit"        
        android:title="@string/action_suggest"/>
     
         <item
        android:id="@+id/action_contrib"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:icon="@android:drawable/ic_menu_help"      
        android:title="@string/action_contrib"/>
     
    <item android:id="@+id/show_map" 
        android:icon="@android:drawable/ic_menu_mapmode"
        android:titleCondensed="Map" android:orderInCategory="101" 
        android:showAsAction="ifRoom|withText"
        android:title="Map"></item>
    
         <item android:id="@+id/search"
          android:title="@string/search_title"
          android:icon="@android:drawable/ic_menu_search"
          android:showAsAction="collapseActionView|ifRoom"
          android:actionViewClass="android.widget.SearchView" />
         
         <item android:id="@+id/manual_settings"
          android:title="@string/manual_settings_title"
          android:orderInCategory="110"
          android:showAsAction="never" />
         <!-- history disabled due to memory leaks -->
<!-- 

         <item android:id="@+id/action_history"
          android:title="@string/action_history"
          android:orderInCategory="111"
          android:icon="@android:drawable/ic_menu_recent_history"
          android:showAsAction="never" />
-->          
          

</menu>